src/chrome/komodo/skin/global/icons.less
/* ... */
#sleuthPane
{
    .debug-continue-icon { .icon-play-circle(); }
    .debug-stop-icon { .icon-stop-circle(); }
    .edit-testplan-icon { .icon-cog(); }
}

/* Notifications */

#notificationWidget
{
    .solo-toolbaritem > toolbarbutton > .toolbarbutton-icon
    {
        display: none;
    }
    
    #filter-error { .icon(); .icon-times-circle(); }
    #filter-warning { .icon(); .icon-exclamation-circle(); }
    #filter-info { .icon(); .icon-info-circle(); }
    #filter-progress { .icon(); .icon-clock-o(); }
}

.scrollbutton-up
{
    .icon();
    .icon-angle-left();
}

.scrollbutton-down
{
    .icon();
    .icon-angle-right();
}

.tab-close-button > .toolbarbutton-icon,
.tabs-closebutton:not([anonid="panel-close-button"])
{
    visibility: collapse;
    display: none;
}

.textbox-search-icons {
    .icon();
    .icon-search();
    
    & > image
    {
        visibility: collapse;
        width: 0;
    }
}

notificationbox .close-icon,
.tab-close-button,
.file-close-button,
.tabs-closebutton
{
    .icon();
    .icon-cross3();
    font-size: 16px;
    padding: 0 !important;
    margin: 0 !important;
}

#invoketool_toolbar_options,
#domviewer-settings-button,
.collab-sessions-menu-icon,
.codeintel-settings-button,
.project-tools-icon,
.preferences-icon,
page .cog-icon,
{
    .icon();
    
    & > .toolbarbutton-text
    {
        .icon();
        .icon-cog();
    }
}

#dbx_button_addDatabase
{
    .icon();
    .icon-plus();
}

checkbox:not(.label-only)
{
    .checkbox-spacer-box
    {
        .icon();
        margin-right: 4px;
    }
    
    .icon();
    
    &:not([checked="true"]) .checkbox-spacer-box { .icon-square(); }
    &[checked="true"] .checkbox-spacer-box { .icon-check-square(); }
}

menuitem[type="checkbox"]
{
    & > .menu-iconic-checker
    {
        .icon();
        margin-right: 4px;
    }
    
    &:not([checked="true"]) > .menu-iconic-checker { .icon-square(); }
    &[checked="true"] > .menu-iconic-checker { .icon-check-square(); }
}

radio 
{
    .radio-label-box
    {
        .icon();
    }
    
    &:not([selected="true"]) .radio-label-box { .icon-circle(); }
    &[selected="true"] .radio-label-box { .icon-check-circle(); }
}

menuitem[type="radio"]
{
    & > .menu-iconic-checker
    {
        .icon();
        margin-right: 4px;
    }
    
    &:not([checked="true"]) > .menu-iconic-checker { .icon-circle(); }
    &[checked="true"] > .menu-iconic-checker { .icon-check-circle(); }
}

treechildren::-moz-tree-twisty
{
    width: 14px;
    height: 14px;
}

treechildren::-moz-tree-image
{
    max-width: 14px;
    max-height: 14px;
}

treechildren::-moz-tree-twisty {
    list-style-image: none !important;
    background-image: url("koicon://ko-svg/chrome/komodo/skin/images/trees/twisty-right.svg?size=14");
    background-size: 14px;
    background-repeat: no-repeat;
}

treechildren::-moz-tree-twisty(open) {
    background-image: url("koicon://ko-svg/chrome/komodo/skin/images/trees/twisty-down.svg?size=14");
}

treecol[type="checkbox"]
{
    .icon();
    .icon-checkmark();
    font-size: 8px;
    
    &:before
    {
        margin-left: 6px;
    }
    
    image
    {
        visibility: collapse;
    }
}

treechildren::-moz-tree-checkbox {
    list-style-image: url("koicon://ko-svg/chrome/fontawesome/skin/square.svg?size=16") !important;
    margin: 0;
    padding: 0;
    margin-left: -2px;
    width: 16px;
}

treechildren::-moz-tree-checkbox(checked) {
    list-style-image: url("koicon://ko-svg/chrome/fontawesome/skin/check-square.svg?size=16") !important;
}

treechildren::-moz-tree-checkbox(disabled)
{
    opacity: 0.25;
}

dropmarker {
    .icon();
    .icon-down-tiny();
}

image.tab-icon
{
    max-width: 14px !important;
    height: 14px;
}

.breadcrumb.folder .breadcrumb-icon,
.breadcrumb .folder-item > .menu-iconic-left,
.folder-icon
{
    .icon();
    .icon-folder();
}

.breadcrumb-arrow
{
    .icon();
    .icon-chevron-right();
}

menu > .menu-right
{
    .icon();
    .icon-angle-right();
}

/* Notify */

#notification-widget-textbox button 
{
    &.notification-icon
    {
        .icon();
        .icon-exclamation-circle();
    }
    
    &.menu > .box-inherit
    {
        .icon();
        .icon-cog();
    }
    
    &.undo
    {
        .icon();
        .icon-undo2();
    }
    
    dropmarker
    {
        display: none;
    }
}

.packages-icon
{
    .icon-download();
}

button.spinbuttons-up { .icon(); .icon-caret-up(); }
button.spinbuttons-down { .icon(); .icon-caret-down(); }

/* Find Icons */

checkbox#opt-case,
.ko-findbar-case-sensitive
{
    &[value="ignore-case"] .checkbox-spacer-box,
    &[value="FOC_INSENSITIVE"] > .toolbarbutton-text
    {
        .icon();
        .icon-case-insensitive();
    }
    
    &[value="match-case"] .checkbox-spacer-box,
    &[value="FOC_SENSITIVE"] > .toolbarbutton-text
    {
        .icon();
        .icon-case-sensitive();
    }
    
    &[value="smart-case"] .checkbox-spacer-box,
    &[value="FOC_SMART"] > .toolbarbutton-text
    {
        .icon();
        .icon-smart-case();
    }
}

checkbox#opt-word .checkbox-spacer-box
{
    .icon-text-width();
}

checkbox#opt-multiline .checkbox-spacer-box
{
    .icon-align-left();
}

checkbox#opt-regex .checkbox-spacer-box,
.ko-findbar-pattern-type[value="FOT_REGEX_PYTHON"] > .toolbarbutton-text
{
    .icon();
    .icon-regexp-14();
}

checkbox#opt-repl .checkbox-spacer-box
{
    .icon-refresh();
}

checkbox#search-in-subdirs .checkbox-spacer-box
{
    .icon-recurse-14();
}

#open-in-rx-btn,
.ko-findbar-open-dialog
{
    .icon();
    .icon-external-link-square();
}

.ko-findbar-pattern-type[value="FOT_WILDCARD"] > .toolbarbutton-text
{
    .icon();
    .icon-asterisk();
}

.ko-findbar-pattern-type[value="FOT_SIMPLE"] > .toolbarbutton-text
{
    .icon();
    .icon-font();
}

#find-next-btn,
.ko-findbar-next
{
    .icon();
    .icon-arrow-down();
}

#find-prev-btn,
.ko-findbar-prev
{
    .icon();
    .icon-arrow-up();
}
/* ... */

